# raknong_4ever

./: .gitignore  README.md  global_community_platform_rust.md  implement_plan.md
client/: Cargo.toml  Dioxus.toml
client/assets/: main.css  tailwind.css
client/src/: backend.rs  i18n.rs  main.rs
client/src/module_bindings/: add_event_question_reducer.rs  create_event_reducer.rs  deactivate_event_reducer.rs  delete_event_response_reducer.rs  event_question_table.rs  event_question_type.rs  event_response_table.rs  event_response_type.rs  event_table.rs  event_type.rs  mod.rs  register_profile_reducer.rs  submit_response_reducer.rs  toggle_verification_reducer.rs  user_profile_table.rs  user_profile_type.rs
spacetimedb/: Cargo.toml
spacetimedb/src/: lib.rs
