[package]
name = "forever-client"
version = "0.1.0"
edition = "2021"
description = "4ever & Beyond - Community Platform Frontend (Dioxus 0.7)"

[dependencies]
dioxus = { version = "0.7.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
