[package]
name = "forever-client"
version = "0.1.0"
edition = "2021"
description = "4ever & Beyond - Community Platform (Dioxus 0.7 Fullstack + PostgreSQL)"

[dependencies]
dioxus = { version = "0.7.1", features = ["fullstack", "router"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
chrono = { version = "0.4", features = ["serde"], optional = true }

[dependencies.sqlx]
version = "0.8"
features = ["runtime-tokio", "postgres", "chrono"]
optional = true

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:sqlx", "dep:chrono"]
